# comparecaf

./: CMakeLists.txt  README.md  main.cxx
.github/workflows/: cmake.yml
data/: CMakeLists.txt
src/: CMakeLists.txt  guise.cxx  guise.hxx  guise.pc.in
